# finpipe-faucet

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  README.md  api.py  basic.py  client.py  consumer.py  db.py  display_consumer.py  docker-compose.yml  index.html  main.py  producer.py  pyproject.toml  simple_api.py  transforms.py  volume_consumer.py  worker_app.py
logging/: grafana-dashboard.json  prometheus.yml
logging/provisioning/dashboards/: dashboards.yml
logging/provisioning/datasources/: datasources.yml
server/: auth.py  config.py  db.py  logging_config.py
server/api/: app.py  deps.py
server/api/routes/: auth.py  internal.py  positions.py  users.py  ws.py
server/ingestion/: massive.py
server/pipeline/: enrichment.py  relay.py  state.py
tests/: stress.sh  stress_users.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui-src/: vite.config.ts
ui-src/src/: index.css  types.ts
ui-src/src/components/: Dashboard.tsx  Login.tsx  TickerRow.tsx
ui-src/src/hooks/: useMarketStatus.ts  useStockWebSocket.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: Dashboard.tsx  Login.tsx  Logo.tsx  PositionsTab.tsx  Preferences.tsx  TickerRow.tsx
ui/src/hooks/: useMarketStatus.ts  useStockWebSocket.ts
ui/src/store/: userStore.ts
