[project]
name = "finpipe-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "massive>=2.3.2",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "rich>=13.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "uvicorn>=0.34.0",
    "websockets>=13.0",
    "python-logging-loki>=0.3.1",
    "pandas-market-calendars>=5.3.1.2",
]
